2009-04-29  Sankar P  <sankar.curiosity@gmail.com>

	* gmime.doap: Added new doap file to describe the project.

2009-04-29  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-events.[c,h]: Don't require a GObject owner.

	* gmime/gmime-message.c (g_mime_message_set_mime_part): Add a
	mime_part_headers_changed listener.
	(g_mime_message_finalize): Remove the listener.
	(mime_part_headers_changed): Uncache the message header stream.
	(message_get_headers): Removed hack.
	(message_write_to_stream): Same.

	* gmime/gmime-header.c (g_mime_header_list_set_stream): Emit a
	changed event.
	(g_mime_header_iter_set_value): Call set_stream() instead of
	setting the stream to NULL ourselves. Also causes a changed event
	to be emitted.
	(g_mime_header_list_prepend): Same.
	(g_mime_header_list_append): Here too.
	(g_mime_header_list_set): And here.
	(g_mime_header_list_remove): Same.

2009-04-28  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-part.c (g_mime_part_get_best_content_encoding): New
	helper function to calculate the most efficient
	Content-Transfer-Encoding for a given mime-part.

2009-04-28  Jeffrey Stedfast  <fejj@novell.com>

	* build/vs2008/config-win32.h.in: No longer has GMIME_*_VERSION
	defines - these are all in gmime-version.h now.

	* gmime/gmime-version.h.in: New template for generating
	gmime-version.h

	* gmime/gmime.h: #include gmime-version.h

	* configure.ac: Renamed from configure.in. Now generates a
	gmime/gmime-version.h header which contains a macro for checking
	the GMime version at compile-time. Requested feature from the
	Balsa guys.

2009-04-26  Jeffrey Stedfast  <fejj@novell.com>

	* tests/test-streams.c: Updated to test GIO streams.

	* gmime/gmime-stream-gio.c: New GMimeStream wrapper around GIO
	streams.

2009-04-26  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-session*.[c,h]: Removed.

	* gmime/gmime-stream-pipe.[c,h]: New stream for pipes (where
	seeking isn't allowed). Needed by GMimeGpgContext.
